--- a/lit.bib
+++ b/lit.bib
@@ -1,6 +1,21 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF-8
 
+@INPROCEEDINGS{PO06,
+  author = {{\"O}lveczky, P. C. and Caccamo, M.},
+  title = {Formal Simulation and Analysis of the CASH Scheduling Algorithm in
+	Real-TIme Maude},
+  booktitle = {Fundemental Approaches to Software Engineering},
+  year = {2006},
+  editor = {Baresi, L. and Heckel, R.},
+  volume = {3922},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {356--372},
+  publisher = {Springer Berlin Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.03.01}
+}
+
 @INPROCEEDINGS{PO04,
   author = {{\"O}lveczky, P. C. and Meseguer, J.},
   title = {Specification and Analysis of Real-Time Systems Using {R}eal-{T}ime
@@ -1333,6 +1348,6 @@
 
 @INPROCEEDINGS{,
   owner = {andylawrence},
-  timestamp = {2014.03.01}
+  timestamp = {2014.04.01}
 }
 
