--- a/Maude.tex
+++ b/Maude.tex
@@ -10,6 +10,8 @@ On the front of hybrid automata, ERTMS has been verified in the form of Hybrid A
 
 There is an example of a distributed sensor network employing the OGDC algorithm that has been modelled and verified using Real Time Maude \cite{PO07}.  The Real Time Maude system can also be used for simulation and analysis of systems as seen in the work on the CASH Scheduling Algorithm \cite{PO06}.
 
+There have been several attempts to model and verify parts of the ERTMS system. The scale of the system and differences in implementations from one country to another both make its formalisation challenging. A subset of the systems requirements specification capturing the high level discrete modes and transitions of ERTMS has been formalised and verified using the SMV model checker \cite{MG14}. Our work attempts to capture the more concrete behaviour of the overall system including that of the highly safety critical interface between ERTMS and the interlocking.
+
 \section{Formalising the European Rail Traffic Management System Using Hybrid Automata}
 One formalism which we can use to reason about systems such as ERTMS is hybrid automata \cite{TH96}. We shall give a theoretical overview of Hybrid Automata before formalising ERTMS as three Hybrid automata composed in parallel.
 We begin by defining the syntax of a Hybrid automata before defining its semantics in terms of a labelled transition system.
