added more ETCS references

--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -482,6 +482,17 @@ r1 \ \textbf{r} \ A[x:= r0] & \quad \text{otherwise} \\
 \]
 
 
+
+
+
+\section{Other Theorem Provers and Their Foundations}
+
+\subsection*{Isabelle} 
+
+\subsection*{Coq} 
+
+\subsection*{Agda}
+
 \begin{comment}
 
 \subsection*{Soundness Theorem}
