--- a/lit.bib
+++ b/lit.bib
@@ -849,6 +849,17 @@
   Volume                   = {5170}
 }
 
+@InProceedings{YL11,
+  Title                    = {Formal modeling and verification of RBC handover of ETCS using Differential Dynamic Logic},
+  Author                   = {Liu, Y. and Tang, T. and Liu, J. and Zhao, L. Xu, T.},
+  Booktitle                = {Tenth International Symposium on Autonomous Decentralizaed Systems},
+  Year                     = {2011},
+  Publisher                = {IEE},
+
+  Owner                    = {csal},
+  Timestamp                = {2014.04.03}
+}
+
 @Article{DL68,
   Title                    = {Mechanical Theorem-Proving by Model Elimination},
   Author                   = {Loveland, D. W.},
@@ -1096,6 +1107,48 @@
   Pages                    = {232--245},
   Publisher                = {Springer-Verlag},
   Series                   = {TPHOLs'07}
+}
+
+@Article{AP08,
+  Title                    = {Differential dynamic logic for hybrid systems},
+  Author                   = {Platzer, A.},
+  Journal                  = {Journal of Automated Reasoning},
+  Year                     = {2008},
+  Number                   = {2},
+  Pages                    = {143--189},
+  Volume                   = {41},
+
+  Publisher                = {Springer}
+}
+
+@InProceedings{AP08b,
+  Title                    = {{KeY}maera: A hybrid theorem prover for hybrid systems},
+  Author                   = {Platzer, A. and Quesel, J.},
+  Booktitle                = {Automated Reasoning, 4th International Joint Conference on (IJCAR)},
+  Year                     = {2008},
+  Editor                   = {Armando, A. and Baumgartner, P, and Dowek, G.},
+  Pages                    = {171--178},
+  Publisher                = {Springer Berlin / Heidelberg},
+  Series                   = {Lecture {N}otes in {C}omputer {S}cience},
+  Volume                   = {5195},
+
+  Owner                    = {csal},
+  Timestamp                = {2014.04.03}
+}
+
+@InProceedings{AP09,
+  Title                    = {European Train Control System: A Case Study in Formal Verification},
+  Author                   = {Platzer, A. and Quesel, J.},
+  Booktitle                = {Formal Methods and Software Engineering, Proceedings of the 11th International Conference on Formal Engineering Methods (ICFEM)},
+  Year                     = {2009},
+  Editor                   = {Breitman, K. and Cavalcanti, A.},
+  Pages                    = {246--265},
+  Publisher                = {Springer Berlin / Heidelberg},
+  Series                   = {{L}ecture {N}otes in {C}omputer {S}cience},
+  Volume                   = {5885},
+
+  Owner                    = {csal},
+  Timestamp                = {2014.04.03}
 }
 
 @InProceedings{AP77,
