--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -486,10 +486,11 @@ r1 \ \textbf{r} \ A[x:= r0] & \quad \text{otherwise} \\
 
 
 \section{Other Theorem Provers and Their Foundations}
-
+Unlike Minlog the following 3 interactive theorem provers all have type theoretic foundations
 \subsection*{Isabelle} 
-
+The theorem prover Isabelle \cite{TN99,LP94}
 \subsection*{Coq} 
+The theorem prover Coq \cite{YB04}
 
 \subsection*{Agda}
 
