--- a/Maude.tex
+++ b/Maude.tex
@@ -126,7 +126,7 @@ The following is a simple example railway we shall use for the purposes of demon
 \end{tikzpicture} 
 \end{center}
 
-\label{fig:trackplan}
+\label{fig:trackplan2}
  \caption{Pentagon Example}
 \end{figure}
 
@@ -168,7 +168,7 @@ The following is a simple example railway we shall use for the purposes of demon
 \draw [arrow] (B) --  node[above = 10pt] {$t_2$} (C);
 \draw [arrow] (C) -- node [left] {$t_3$} (D);
 \end{comment}
-We have modelled the ERTMS system controlling the pentagon example (see fig \ref{fig:trackplan}) using several hybrid automata. In this example the value $D(t)$ represents the distance from the start point at time $t$. 
+We have modelled the ERTMS system controlling the pentagon example (see fig \ref{fig:trackplan2}) using several hybrid automata. In this example the value $D(t)$ represents the distance from the start point at time $t$. 
 It contains 2 trains $A$ and $B$ and 5 track circuits $l_0, \ldots , l_4$. The track is uni-directional allowing trains to travel from $0 - 249$. 
 \medskip
 \begin{myremark}[Train Movement Events]
@@ -293,19 +293,32 @@ The following are equations of motion
 where s = displacement,u = initial velocity, v = final velocity, a = acceleration and t = time.
 \end{mydef}
 \medskip
-Equations number 1 and 2 are the mains one used throughout this formalisation as they allow for the calculation of the distance travelled and speed of a train.
-The train automaton modelling the trains we make use of a function $BD$ that calculates location required to stop at the EoA based on the trains speed. The simplest way to model deceleration would be to assume that the trains speed decreases at $-1$ unit of distance per unit of time. 
-\medskip
+Equations number 1 and 4 are the mains one used throughout this formalisation as they allow for the calculation of the breaking distance and speed of a train.
+In order to model the behaviour of trains we make use of two functions, one to compute the braking distance at the current speed and the other to compute the distance from the train to the end of the movement authority. When the values computed by these two functions become equal the train should begin to brake in order to stop at the end of the movement authority. The simplest way to model deceleration would be to assume that the trains speed decreases at $-1$ unit of distance per unit of time. Equation of motion (4) is used to caluate the breaking distance with $u = 0$ and $a = 1$ it can be rewritten to allow for the calculation of the breaking distance.
+
 \begin{mydef}[Breaking Distance]
-We define the breaking distance for a train given its movement authority $EoA$ and a speed $Speed$  as follows: 
+We define the breaking distance for a train in terms of its speed as follows:
 
-$$ BD(EoA, speed) = EoA - \frac{speed ^2}{2} \, mod \, 250 $$
+$$BD(S) = \frac{S^2}{2} $$
+
+
 \end{mydef}
+
 \medskip
 
+\begin{mydef}[Distance to MA]
+
+The distance to the movement authority DMA is calulated from the distance and movement authority as followings:
+\begin{align*}
+DMA(D(t), MA) & = MA \Monus D(t) \quad \mathbf{if} \ DT \leq MA \\
+                         & = 50 \Monus D(t) + MA \quad \mathbf{otherwise}
+\end{align*}
 
 
-This hybrid automaton has $4$ control modes namely Braking (Auth), Full Allowed Speed, Accelerating and Stopped and has $5$ variables namely $Maxspeed$,$D(t)$ (Position),  $Speed$, $\dot{Speed}$ and $EoA$. We have that $D(t) \leq EoA$ is an invariant of the stopped mode and $D(t) \leq EoA$ is an invariant of all other control modes.
+
+\end{mydef}
+
+This hybrid automaton has $4$ control modes namely Braking (Auth), Full Allowed Speed, Accelerating and Stopped and has $5$ variables namely $Maxspeed$,$D(t)$ (Position),  $Speed$, $\dot{Speed}$ and $EoA$. We have that $ BD(Speed) \leq DMA(D(t), EoA)$ is an invariant of the stopped mode and $D(t) \leq EoA$ is an invariant of all other control modes.
 We define a transition with the event $l_x.l_{x+1}$ which is triggered by the condition $D \,  mod \, 50 = 0$ in the modes $Full Speed$, $Accelerating$ and $Brake$. 
    We compose both the automata for both the interlocking and the hybrid $H_{IL} || H_{T}$. It is possible for a new MA $EoA'$ with $EoA < EoA'$ to be received in the $Braking$ and $Stopped$ states.  This is triggered by the event MA.x.y if $x = TrainID$ then $y$ becomes the new movement authority. The movement event MA.Req.x is used by a train automaton request a movement authority for train x from the RBC automaton.
 
@@ -317,25 +330,27 @@ Secondly we define a hybrid automaton $H_{T}$ which models an individual train.
 
 We define a hybrid automaton $H_{T}$ as follows:
 \begin{description}
-\item[Variables] The state of the interlocking automaton consists of $\underbrace{D(t), EoA}_\text{0, \ldots , 249}$, \newline $\underbrace{Speed, \dot{Speed}, MaxSpeed, TrainID}_{\mathbb{N}}$.
+\item[Variables] The state of the interlocking automaton consists of $\underbrace{D(t), EoA}_\text{0, \ldots , 249}$, \newline $\underbrace{Speed, \dot{Speed}, MaxSpeed, TrainID}_{\mathbb{N}}$. The variable D(t) is computed modulo 250 from Speed.
 
 \item[Control Graph] The control graph of the interlocking automaton consists of four control modes $\{Stop (EoA), \, Braking, \, Accelerating, \, Full \, Allowed \, Speed \}$.
 
 \item[Initial, invariant and flow conditions] \hspace*{0mm}
 	\begin{itemize}
-	\item $init(Stopped) :=   D(t) < EoA  $.
+	\item $init(Stopped) :=   BD(S) \leq DMA(D(t),EoA)  $.
 
-	\item $inv(Full Allowed Speed) :=   \dot{Speed} = 0 \wedge D(t) < EoA$ 
+	\item $inv(Full Allowed Speed) :=   \dot{Speed} = 0 \wedge BD(S) \leq DMA(D(t),EoA)$ 
 
-	\item $inv(Accelerating) := D(t) < EoA$
+	\item $inv(Accelerating) := BD(S) \leq DMA(D(t),EoA)$
 
-	\item $inv(Braking)  := D(t) < EoA$
+	\item $inv(Braking)  := BD(S) \leq DMA(D(t),EoA)$
 	
 	\item $inv(Stop (EoA)) := Speed = 0$ 
-
+             
 	\item $flow(Accelerating):= \dot{Speed} = 1$ 
 	
 	\item $flow(Braking) := \dot{Speed} = -1$
+ 
+  
 	
 	\end{itemize}
 
